<resources>
    <string name="app_name">Movie DB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="latest">Latest</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="original_title">Original Title</string>
    <string name="title">Title</string>
    <string name="movie_id">Movie Id</string>
    <string name="poster">Poster</string>
    <string name="vote_average">Votes Average</string>
    <string name="release_date">Release Date</string>
    <string name="popularity">Popularity</string>
    <string name="overview">Overview</string>
    <string name="orignal_language">Orignal Language</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="phone_no">Phone no.</string>
    <string name="here">here</string>
</resources>