<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4152B1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:backgroundTint="@color/primecolor"
                android:id="@+id/popular"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/popular"
                android:padding="5dp"
                android:layout_width="1dp"
                android:outlineProvider="none"/>
            <Button
                android:backgroundTint="@color/normcolor"
                android:id="@+id/toprated"
                android:layout_weight="1"
                android:width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/top_rated"
                android:outlineProvider="none"
                android:padding="5dp"
                android:layout_width="1dp" />
            <Button
                android:backgroundTint="@color/normcolor"
                android:layout_weight="1"
                android:id="@+id/latest"
                android:layout_height="wrap_content"
                android:text="@string/latest"
                android:padding="5dp"
                android:layout_width="1dp"
                android:outlineProvider="none"/>
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:name="com.example.moviedb.PopularFragment"
        android:layout_height="680dp"
        android:id="@+id/mainfrag"/>
</LinearLayout>